--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
-        <link rel="icon" type="image/svg+xml" href="/vite.svg" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>HIDUP DESPRO</title>
+        <link rel="icon" type="image/x-icon" href="src/assets/images/Logo.ico" />
+        <title>Arcana | Energy Meter</title>
     </head>
     <body>
         <div id="root"></div>
